# email-triage-system

./: Dockerfile  README.md  __init__.py  agent.py  app.py  data_loader.py  environment.py  graders.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  tasks.py  utils.py
env/: __init__.py  data_loader.py  environment.py  graders.py  tasks.py
my_env/: Dockerfile  README.md  agent.py  app.py  inference.py  requirements.txt  server.py
my_env/env/: __init__.py  data_loader.py  environment.py  graders.py  tasks.py
my_env/env/data/: emails.json
server/: __init__.py  app.py
