[project]
name = "openmail-rl"
version = "0.1.0"
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv-core>=0.2.0"
]

# 🔥 CRITICAL FIX
[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
